Fix header icons on mobile

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -122,7 +122,7 @@ nav .list-menu a {
   column-gap: 9rem;
 }
 header.header {
-  max-width: min(136rem, 90%);
+  max-width: min(136rem, 92%);
   margin: auto;
 }
 .list-menu > li {
@@ -474,7 +474,7 @@ footer .list-social__item .icon {
 }
 @media screen and (max-width: 1259px) {
   .header {
-    padding: 11px .8rem 12px 1.8rem!important;
+    padding: 11px 0 12px 0 !important;
   }
   .header > .header__search {
     display: none;
@@ -494,6 +494,7 @@ footer .list-social__item .icon {
   .header__icons {
     position: static;
     left: auto;
+    padding-right: 0;
   }
   .header__icon--menu .icon-close {
     width: 1.6rem;
